--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="green">#4CAF50</color>
     <color name="green_background">#CCF8CE</color>
     <color name="red">#F85F55</color>
+    <color name="rojo">#F44336</color>
     <color name="yellow">#FFC107</color>
     <color name="gray_ligth">#DEDFE3</color>
     <color name="blue_light">#F7658AD5</color>
